src/main/metadata/objects/Recievables_Paid__c.object
<CustomObject>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSB__c</fullName>
        <label>BSB</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No.</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_Receipt_Identifier__c</fullName>
        <formula>FS_Contract__r.Borrower__r.BPID__c+"-"+FS_Contract__r.Contract_ID__c+"-"+Receipt_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Receipt Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptionDrawer_Name__c</fullName>
        <label>Description/Drawer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipName>Receivables_Paid</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Amt__c</fullName>
        <label>Receipt Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Receipt_ID__c</fullName>
        <description>Receipt Id will come from RMW.</description>
        <label>Receipt ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_No__c</fullName>
        <label>Receipt No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amt__c</fullName>
        <label>Refund Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReturnCancel_Date__c</fullName>
        <label>Return/Cancel Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unallocated_Amt__c</fullName>
        <label>Unallocated Amt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Date__c</fullName>
        <label>Value Date</label>
        <type>DateTime</type>
    </fields>
    <label>Receipt Details</label>
    <nameField>
        <displayFormat>RD-{000000}</displayFormat>
        <label>Receipt Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>